// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getContentAriaAttributes() should return correct aria attributes for state: error 1`] = `
{
  "aria-describedby": "descriptionId",
  "aria-labelledby": "labelId",
  "aria-live": "assertive",
  "role": "alert",
}
`;

exports[`getContentAriaAttributes() should return correct aria attributes for state: neutral 1`] = `
{
  "aria-describedby": "descriptionId",
  "aria-labelledby": "labelId",
  "aria-live": "polite",
  "role": "status",
}
`;

exports[`getContentAriaAttributes() should return correct aria attributes for state: success 1`] = `
{
  "aria-describedby": "descriptionId",
  "aria-labelledby": "labelId",
  "aria-live": "polite",
  "role": "status",
}
`;

exports[`getContentAriaAttributes() should return correct aria attributes for state: warning 1`] = `
{
  "aria-describedby": "descriptionId",
  "aria-labelledby": "labelId",
  "aria-live": "assertive",
  "role": "alert",
}
`;

exports[`getIconName() should return correct icon for state: error 1`] = `"exclamation"`;

exports[`getIconName() should return correct icon for state: neutral 1`] = `"information"`;

exports[`getIconName() should return correct icon for state: success 1`] = `"success"`;

exports[`getIconName() should return correct icon for state: warning 1`] = `"warning"`;
